--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -1,5 +1,50 @@
+.change {
+  background-color: var(--color-white);
+  color: var(--color-gray) !important;
+    border-bottom: 1px solid var(--color-lightgray) !important;
+}
+
 .Header {
   width: 100%;
+}
+.Header .header_gnb {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  color: var(--color-white);
+  border-bottom: 1px solid var(--color-gray);
+}
+.Header .header_gnb_inner {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  padding: 0 1rem;
+  box-sizing: border-box;
+}
+.Header .header_nav {
+  display: flex;
+  align-items: center;
+  gap: 1.3rem;
+}
+
+.Header .header_nav > li {
+  font-size: 1rem;
+  font-weight: bold;
+}
+.Header .header_menu > ul {
+  display: flex;
+  align-items: center;
+  gap: 1.3rem;
+}
+
+.Header .header_menu > ul > li {
+  font-size: 1rem;
+  font-weight: bold;
 }
 .Header .header_bg {
   width: 100%;
@@ -8,37 +53,7 @@
   background-position: center;
   background-size: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/bg.jpeg);
-}
-.Header .header_gnb {
-  position: relative;
-  top: 0;
-  left: 0;
-  height: 5rem;
-  border-bottom: 1px solid var(--color-gray);
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.Header .header_gnb > .header_nav {
-  display: flex;
-  align-items: center;
-  gap: 1.3rem;
-}
-.Header .header_gnb > .header_nav > li {
-  color: var(--color-white);
-  font-size: 1rem;
-  font-weight: bold;
-}
-.Header .header_gnb > .header_menu > ul {
-  display: flex;
-  align-items: center;
-  gap: 1.3rem;
-}
-.Header .header_gnb > .header_menu > ul > li{
-  color: var(--color-white);
-  font-size: 1rem;
-  font-weight: bold;
+  padding-top: 5rem; 
 }
 .Header .site_info {
   display: flex;
@@ -46,17 +61,19 @@
   gap: 1.3rem;
   height: 18rem;
 }
-.Header .site_info > .site_logo > img {
+.Header .site_logo > img {
   width: 7.6em;
   height: 7.6em;
   border-radius: 50%;
 }
-.Header .site_info > .site_sub {
+.Header .site_sub {
   color: var(--color-white);
   line-height: 2rem;
 }
-.Header .site_info > .site_sub > .site_name {
+.Header .site_sub > .site_name {
   font-size: 1.2rem;
   font-weight: bold;
 }
-.Header .site_info > .site_sub > .site_des {}
+.Header .site_sub > .site_des {
+  font-size: 1rem;
+}
