Header .header_bg modify

--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -48,7 +48,7 @@
 }
 .Header .header_bg {
   width: 100%;
-  height: 25rem;
+  padding: 2.5rem 0;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
