--- a/src/assets/css/MainProps2.css
+++ b/src/assets/css/MainProps2.css
@@ -1,8 +1,8 @@
-.Main_props2 {
+.MainProps2 {
   width: 100%;
   margin-top: 80px;
 }
-.Main_props2 .main_props_title {
+.MainProps2 .main_props_title {
   margin-bottom: 30px;
   border-bottom: 1px solid var(--color-lightgray);
   padding-bottom: 0.5rem;
@@ -10,46 +10,46 @@
   justify-content: space-between;
   align-items: center;
 }
-.Main_props2 .main_props_title > .title {
+.MainProps2 .main_props_title > .title {
   text-decoration: underline;
   text-decoration-color: var(--color-green);
   text-underline-offset: 14px;
   font-size: 1.2rem;
   color: var(--color-green);
 }
-.Main_props2 .main_props_img {
+.MainProps2 .main_props_img {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.Main_props2 .main_props_img .txt_box {
+.MainProps2 .main_props_img .txt_box {
   padding-top: 1rem;
   line-height: 2.3rem;
 }
-.Main_props2 .main_props_img .img_name {
+.MainProps2 .main_props_img .img_name {
   font-size: 1.3rem;
 }
 
-.Main_props2 .main_props_img > .img_box2 {
+.MainProps2 .main_props_img > .img_box2 {
   display: flex;
   flex-direction: column;
   justify-content: left;
 }
-.Main_props2 .main_props_img > .img_wrap2 > .img_box2 {
+.MainProps2 .main_props_img > .img_wrap2 > .img_box2 {
   width: 540px;
   height: 360px;
   overflow: hidden;
 }
-.Main_prop2s .main_props_img > .img_wrap2 > .img_box2 > img {
+.MainProp2s .main_props_img > .img_wrap2 > .img_box2 > img {
   width: 100%;
   height: 100%;
 }
-.Main_props2 .main_props_img > .img_wrap2 > .img_box2 > img:hover {
+.MainProps2 .main_props_img > .img_wrap2 > .img_box2 > img:hover {
   transform: scale(1.1);
   transition: .2s;
 }
-.Main_props2 .main_props_img .img_name {
+.MainProps2 .main_props_img .img_name {
   font-size: 1.3rem;
   color: var(--color-green);
 }
