--- a/src/assets/css/TitleTheme.css
+++ b/src/assets/css/TitleTheme.css
@@ -1,6 +1,6 @@
 .TitleTheme {
   width: 100%;
-  margin-top: 80px;
+  margin-top: 6.1rem;
 }
 .TitleTheme .main_intro_title {
   margin-bottom: 30px;
