--- a/src/assets/css/MainBlog.css
+++ b/src/assets/css/MainBlog.css
@@ -1,10 +1,15 @@
 .MainBlog {
   width: 100%;
+  margin-bottom: 6.15rem;
 }
 .MainBlog .blog_card_wrap .card_area {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+}
+.sub{
+  display: flex;
+  flex-wrap: wrap;
 }
 .MainBlog .blog_card_wrap .card_bg {
   width: 353px;
@@ -17,7 +22,7 @@
   height: auto;
 }
 .MainBlog .blog_card_wrap .card_bg .card_box .card_txt {
-  height: 200px;
+  height: 220px;
 }
 .MainBlog .blog_card_wrap .card_bg img {
   width: 100%;
@@ -27,7 +32,7 @@
   display: flex;
   align-items: center;
   gap: 1.5rem;
-  margin-top: 1.5rem;
+  margin: 1.5rem 0;
 }
 .MainBlog .blog_card_wrap h3 {
   padding-bottom: 1rem;
