--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -18,6 +18,9 @@ a {
   text-decoration: none;
   color: inherit
 }
+html, body {
+  overflow-x: hidden;
+}
 body {
   font-size: 13px;
   color: #333333;
@@ -29,4 +32,11 @@ body {
 }
 button {
   cursor: pointer;
+}
+.App {
+  display: flex;
+  flex-direction: column;
+}
+.App.width {
+  width: calc(100% - 320px);
 }
