--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -1,9 +1,11 @@
 .Footer {
-  width: 100%;
-  /* height: 107px; */
+  width: 100vw;
   background-color: #000;
   color: #fff;
   padding: 58px 0;
+}
+.Footer.width {
+  width: calc(100% - 320px);
 }
 .Footer > .inner > .ft_top {
   display: flex;
