--- a/src/assets/css/SubMap.css
+++ b/src/assets/css/SubMap.css
@@ -1,11 +1,11 @@
-.MainMap {
+.SubMap {
   width: 100vw;
   margin-bottom: 6.1rem;
 }
-.MainMap.width {
+.SubMap.width {
   width: calc(100% - 320px);
 }
-.MainMap > .inner > .submap_area {
+.SubMap > .inner > .submap_area {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -13,7 +13,7 @@
   border-bottom: 1px solid #ebebeb;
   margin-bottom: 40px;
 }
-.MainMap > .inner > .submap_area > .title {
+.SubMap > .inner > .submap_area > .title {
   display: inline-block;
   color: var(--color-blue);
   letter-spacing: -.8px;
@@ -22,7 +22,7 @@
   cursor: pointer;
   padding-bottom: 7px;
 }
-.MainMap > .inner > .map_area {
+.SubMap > .inner > .map_area {
   padding-top: 2rem;
   display: flex;
   justify-content: left;
@@ -30,27 +30,27 @@
   flex-direction: column;
   gap: 50px;
 }
-.MainMap > .inner > .map_area > .map_address {
+.SubMap > .inner > .map_area > .map_address {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.MainMap > .inner > .map_area > .map_address {
+.SubMap > .inner > .map_area > .map_address {
   display: flex;
 }
-.MainMap > .inner > .map_area > .map_address  h2:nth-of-type(1) {
+.SubMap > .inner > .map_area > .map_address  h2:nth-of-type(1) {
   display: none;
 }
-.MainMap > .inner > .map_area > .map_address  h2:nth-of-type(2) {
+.SubMap > .inner > .map_area > .map_address  h2:nth-of-type(2) {
   color: var(--color-green);
 }
-.MainMap > .inner > .map_area > .map_address  .map_btn {
+.SubMap > .inner > .map_area > .map_address  .map_btn {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
 }
-.MainMap > .inner > .map_area > .map_address  .map_btn > button {
+.SubMap > .inner > .map_area > .map_address  .map_btn > button {
   width: auto;
   height: 40px;
   padding: 0 20px;
@@ -64,7 +64,7 @@
   color: #fff;
   background-color: var(--color-green);
 }
-.MainMap > .inner > .map_area > .map_address  h2 {
+.SubMap > .inner > .map_area > .map_address  h2 {
   font-size: 2rem;
   font-weight: normal;
   color: var(--color-blue)
@@ -100,4 +100,7 @@
  width: 28rem;
  text-align: right;
  color: var(--color-gray);
+}
+.SubMap > .inner .mob_map_area  {
+  display: none;
 }
