--- a/src/assets/responsive/R_Header.css
+++ b/src/assets/responsive/R_Header.css
@@ -1,39 +1,42 @@
 @media (max-width: 767px) {
   .change {
     background-color: var(--color-green);
-    border-bottom: none !important;
+    border-bottom: none;
     max-height: 3rem;
     padding-bottom: 0.5rem;
   }
-  .change * {
-  color: var(--color-white) !important;
 
-}
+  .change * {
+    color: var(--color-white);
+    background-color: var(--color-green);
+  }
+
   .inner {
     padding: 0 2rem;
   }
-  .Header .header_gnb * {
-    border-bottom: none;
-    background-color: var(--color-green);
-    max-height: 3rem;
-    /* padding-bottom: 0.5rem; */
-    color: var(--color-white) !important;
-  }
+
   .Header .header_gnb {
     border-bottom: none;
+    height: auto;
   }
-  .header_gnb_inner {
+
+  .Header .header_gnb_inner {
     padding: 2rem;
     max-height: 3rem;
-  
   }
-  .header_gnb_inner > p {
+
+  .Header .header_gnb_inner > p {
     margin-right: 1.5rem;
   }
+  .Header .header_gnb_inner > p:first-of-type {
+    font-size: 1.5rem !important;
+  }
+
   .header_nav {
     overflow-x: auto;
     max-width: 330px;
   }
+
   .header_menu {
     display: none;
   }
@@ -41,54 +44,70 @@
     display: block;
     font-size: 1.5rem;
   }
+
   .Header .header_gnb_inner .header_nav ul {
     display: flex;
-    gap: 0;
+    gap: 1.3rem;
   }
- .Header .header_gnb_inner .header_nav li {
-    width: 5rem;
+
+  .Header .header_gnb_inner .header_nav li {
     text-align: center;
-    font-size: 0.9rem;
-    color: #ccc;
-    padding: 0.5rem 0;
+    font-size: 1rem;
+    color: #e2e2e2c0;
+    border-bottom: none;
+  }
+
+  /* 선택된 li(green 클래스)에만 적용 */
+  .Header .header_gnb_inner .header_nav li.green {
+    color: var(--color-white);
+    text-decoration: underline;
+    text-underline-offset: 3px;
   }
 
   .Header .header_bg {
     background-size: cover;
-    background-position:top;  
+    background-position: top;  
     height: 336px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/bg.jpeg);
     border-bottom: 7px solid #ccc;
   }
+
   .Header .site_info {
     display: flex;
     flex-direction: column;
     text-align: center;
     margin-top: 2rem;
   }
+
   .Header .site_info img {
     width: 5.7rem;
     height: 5.7rem;
   }
+
   .Header .site_info .site_sub {
     line-height: 1.4rem;
   }
+
   .Header .site_info .site_sub .site_des {
     color: #ccc;
   }
+
   .site_icon {
     display: block;
   }
+
   .site_icon .site_buttons {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
   }
-  .site_icon .site_buttons .site_item  {
+
+  .site_icon .site_buttons .site_item {
     background: none;
     border: none;
     color: var(--color-white);
   }
+
   .site_icon .site_buttons .site_img_box {
     border-radius: 50%;
     background-color: var(--color-green);
@@ -99,18 +118,16 @@
     align-items: center;
     margin-bottom: 0.5rem;
   }
+
   .site_icon .site_buttons .site_item .site_text {
     color: var(--color-lightgray);
   }
-  
 
-  .green {
-    color: var(--color-white) !important;
-    border-bottom: none;
-    text-decoration: underline;
-    text-underline-offset: 3px;
-  }
   .logo {
     display: none;
+  }
+
+  .bg_change {
+    background-color: var(--color-green);
   }
 }
