--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -145,7 +145,7 @@
 
 
 .green {
-  color: var(--color-green);
+  color: var(--color-green) !important;
   border-bottom: 1px solid var(--color-green);
 }
 .white {
