--- a/src/assets/responsive/R_SubMap.css
+++ b/src/assets/responsive/R_SubMap.css
@@ -1,6 +1,7 @@
 @media (max-width:767px) {
   .SubMap {
-    margin-bottom: 2.1rem;
+    margin-bottom: 0;
+    border-bottom: 7px solid #ccc;
   }
   .SubMap > .inner .map_area {
     display: none;
@@ -12,6 +13,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-bottom: 2.1rem;
   }
   .SubMap > .inner .mob_map_area .time_box {
     display: flex;
