--- a/src/assets/css/FloatingBtn.css
+++ b/src/assets/css/FloatingBtn.css
@@ -40,7 +40,7 @@
 .fab_pc_container {
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  right: 2rem;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
