--- a/src/assets/responsive/R_Header.css
+++ b/src/assets/responsive/R_Header.css
@@ -10,7 +10,9 @@
     color: var(--color-white);
     background-color: var(--color-green);
   }
-
+  .header_gnb.shift {
+    transform: translateX(0);
+  }
   .inner {
     padding: 0 2rem;
   }
@@ -18,6 +20,7 @@
   .Header .header_gnb {
     border-bottom: none;
     height: auto;
+    z-index: 999;
   }
 
   .Header .header_gnb_inner {
@@ -34,6 +37,7 @@
 
   .header_nav {
     overflow-x: auto;
+    padding: 1rem 0;
     max-width: 330px;
   }
 
@@ -126,8 +130,148 @@
   .logo {
     display: none;
   }
-
   .bg_change {
     background-color: var(--color-green);
   }
+
+  .Header .side_menu_bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 320px;
+    z-index: 999;
+    color: #ebebeba4;
+    background-color: var(--color-green);
+  }
+  .Header .side_menu_bar .logo_area {
+    display: none;
+  }
+  .Header .side_menu_bar .header_nav {
+    height: auto;
+    background-color: var(--color-white);
+    padding-left: 1rem;
+  }
+  .Header .side_menu_bar .header_nav ul li {
+    padding: 0;
+    padding: 1rem 0;
+    color: var(--color-gray);
+    border-bottom: 1px solid var(--color-lightgray);
+  }
+  .Header .side_menu_bar .header_nav ul li:last-of-type {
+    border-bottom: none;
+  }
+  .Header.width {
+    width: 100%;
+  }
+  .Header .mob_logo_area {
+    display: flex;
+    flex-direction: column;
+  }
+  .Header .mob_logo_area .mob_top {
+    display: flex;
+    justify-content: right;
+    align-items: start;
+    gap: 6rem;
+  }
+  .Header .mob_logo_area .mob_top .close {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    padding: 0.3rem 0;
+  }
+  .Header .mob_logo_area .mob_top .close button {
+    background: none;
+    border: none;
+    font-size: 1.2rem;
+    color: var(--color-white);
+    padding: 0.5rem;
+  }
+  .Header .mob_logo_area .title_area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 0.5rem;
+  }
+  .Header .mob_logo_area .mob_top .logo_img_box {
+    overflow: hidden;
+    margin-top: 2rem;
+  }
+  .Header .mob_logo_area .mob_top .logo_img_box img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    object-fit: cover;
+   }
+   .Header .mob_logo_area .title_area .logo_txt {
+    line-height: 1.3rem;
+    text-align: center;
+   }
+   .Header .mob_logo_area .title_area .logo_txt p {
+      font-size: 1rem;
+      color: var(--color-white);
+   }
+   .Header .mob_logo_area .icon_area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.7rem 0;
+    border: 1px solid #1515151a;
+   }
+   .Header .mob_logo_area .icon_area .fab {
+    font-size: 1.3rem;
+    color: var(--color-white);
+   }
+   .Header .mob_logo_area .icon_area p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    color: var(--color-white);
+    border-right: 1px solid #1515151a;
+    width: calc(100% / 4);
+   }
+   .Header .mob_logo_area .icon_area p:last-child {
+    border: none;
+   }
+   .Header .click_area .show_btn_area  {
+     background-color: #50b42f;
+  }
+    .Header .click_area .show_btn_area p {
+      color: var(--color-white);
+      text-align: center;
+      font-size: 0.8rem;
+      padding-bottom: 0.3rem;
+    }
+   .show_area {
+    display: none;
+    background-color: #f5f5f5;
+    padding: 1rem;
+   }
+   .show_area .show_des_area {
+    display: flex;
+    font-size: 0.9rem;
+    gap: 0.8rem;
+    color: var(--color-gray);
+    padding: 0.8em 0rem;
+   }
+   .show_area > ul:last-of-type {
+    font-size: 0.9rem;
+    color: var(--color-gray);
+   }
+   .show_area .hide_area {
+    text-align: center;
+    padding-top: 1rem;
+   }
+   .show_area .hide_area p {
+    color: var(--color-gray);
+    font-size: 0.8rem;
+   }
+
+   .mob_show {
+    display: block;
+   }
+   .mob_hide {
+    display: none;
+   }
+   
 }
