--- a/src/assets/css/FloatingBtn.css
+++ b/src/assets/css/FloatingBtn.css
@@ -137,6 +137,10 @@
   align-items: center;
   flex-direction: column;
 }
+
+.fab_overlay_area {
+  display: none;
+}
 .fab_overlay {
   opacity: 0;
 }
