--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: 5rem;
   color: var(--color-white);
-  border-bottom: 1px solid var(--color-gray);
+  border-bottom: 1px solid #cccccc50;
 }
 .Header .header_gnb_inner {
   max-width: 1100px;
