--- a/src/assets/css/FloatingBtn.css
+++ b/src/assets/css/FloatingBtn.css
@@ -144,3 +144,73 @@
 .fab_overlay {
   opacity: 0;
 }
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 440px;
+  height: 326px;
+  background: white;
+  transform: translate(-50%, -50%);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  z-index: 1000;
+}
+
+/* 모달 오버레이 */
+.modal_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+.modal_area {
+  width: 100%;
+  height: 326px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
+/* 모달 내부 스타일 */
+.modal_header {
+  background: #393f47;
+  color: #fff;
+  font-weight: bold;
+  text-align: left;
+  padding: 10px;
+  width: 420px;
+  height: 35px;
+  line-height: 35px;
+}
+.modal_content {
+  padding: 20px;
+  font-size: 18px;
+  line-height: 2;
+}
+.modal_content > strong {
+  font-size: 16px;
+}
+.modal_content > .phone_number {
+  color: var(--color-green);
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.modal_footer {
+  width: 100%;
+  border-top: 1px solid #ccc;
+}
+.modal_footer .close_btn{
+  background: none;
+  border: none;
+  background-color: var(--color-black);
+  color: var(--color-white);
+  font-weight: bold;
+  padding: 0.6rem 1.5rem;
+  margin: 1rem 0rem;
+}
