--- a/src/assets/responsive/R_FloatingBtn.css
+++ b/src/assets/responsive/R_FloatingBtn.css
@@ -12,8 +12,8 @@
   
   /* 더보기 버튼 */
   .fab_main {
-    width: 50px;
-    height: 50px;
+    width: 2.4rem;
+    height: 2.4rem;
     background-color: var(--color-green);
     color: #fff;
     border: none;
@@ -21,7 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 24px;
+    font-size: 1.2rem;
     cursor: pointer;
     transition: 0.3s;
   }
@@ -39,8 +39,8 @@
   
   /* 개별 버튼 */
   .fab_item {
-    width: 50px;
-    height: 50px;
+    width: 2.4rem !important;
+    height: 2.4rem !important;
     background-color:var(--color-green);
     color: #fff;
     border: none;
@@ -48,10 +48,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 1.2rem;
     cursor: pointer;
     transition: 0.3s;
     position: relative;
+    pointer-events: none;
+  }
+  .fab_buttons svg {
+    font-size: 1.2rem;
   }
   
   .fab_item .fab_text {
@@ -69,7 +73,7 @@
   }
   .fab_buttons {
     position: fixed;
-    bottom: 80px;
+    bottom: 4.2rem;
     right: 20px; /* ← right: 0 이 아니라 20px로 고정 */
     display: flex;
     flex-direction: column;
@@ -80,7 +84,8 @@
   .fab_item {
     width: 50px;
     height: 50px;
-    opacity: 0;
+    /* opacity: 0; */
+    display: none;
     transform: translateY(2rem);
     transition: opacity 0.1s ease, transform 0.05s ease;
   }
@@ -88,16 +93,19 @@
     right: 0rem;
   }
   .fab_buttons.show .fab_item {
-    opacity: 1;
+   /*  opacity: 1; */
+   display: block;
     transform: translateY(0rem);
+    pointer-events: auto;
   }
   .fab_buttons.close .fab_item {
-    opacity: 0;
+    /* opacity: 0; */
+    display: none;
     transform: translateY(0);
   }
   .fab_icon {
     font-size: 22px;
-    padding-left: 8px;
+    padding-left: 0;
   }
   .fab_more {
     position: fixed;
@@ -119,7 +127,7 @@
   
   .fab_main {
     display: block;
-    padding-top: 5px;
+    padding-top: 0.4rem;
   }
   .fab_top {
     display: none;
@@ -128,6 +136,11 @@
 
   .fab_pc_container {
     display: none;
+  }
+  .fab_pc_icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .fab_buttons.show .fab_item:nth-child(1) { transition-delay: 0.07s; }
