--- a/src/assets/css/Subpage.css
+++ b/src/assets/css/Subpage.css
@@ -20,6 +20,7 @@
   width: 353px;
   height: 235px;
   position: relative;
+  cursor: pointer;
 }
 .Subpage .subpage_img > .img_wrap > .img_box > img {
   width: 100%;
@@ -68,7 +69,7 @@
   overflow: hidden;
   margin: 0;
 }
- .best_badge {
+ .Subpage .best_badge {
   position: absolute;
   top: 0.5rem;
   left: 0.5rem;
@@ -78,6 +79,57 @@
   font-size: 0.75rem;
   font-weight: bold;
   z-index: 2;
+}
+
+.Subpage .detail_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(97, 97, 97, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  cursor: pointer;
+}
+
+.Subpage .detail_img_container {
+  position: relative;
+  max-width: 100vw;
+  max-height: 100vh;
+  padding: 2rem;
+  cursor: default;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--color-lightgray);
+}
+
+.Subpage .detail_img_container img {
+  max-width: 100%;
+  max-height: 60vh;
+  object-fit: contain;
+  border-radius: 4px;
+}
+.Subpage .close_btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: none;
+  border: none;
+  font-size: 24px;
+  background-color: var(--color-black);
+  cursor: pointer;
+  color:  var(--color-white);
+  z-index: 1001;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s;
 }
 
 
