--- a/src/assets/responsive/R_SubPage.css
+++ b/src/assets/responsive/R_SubPage.css
@@ -109,4 +109,7 @@
   .Subpage.mobile_common {
     margin: 0;
   }
+  .Subpage .detail_overlay .detail_img_container {
+    margin: 0 2rem;
+  }
 }
