--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -24,6 +24,7 @@
   color: #fff;
   text-align: center;
   position: relative;
+  cursor: pointer;
 }
 .Footer > .inner > .ft_top > .search_area > .keyword::after {
   position: absolute;
